--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ md-toc==6.0.2
 pyyaml-include==1.2
 pyyaml==5.3
 rtyaml==1.0.0
-git+https://github.com/CivicActions/secrender.git#egg=secrender
+git+https://github.com/CivicActions/secrender.git@v0.5.0#egg=secrender
