--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,13 @@ atomicwrites==1.3.0       # via fpyutils
 click==7.0
 fpyutils==1.1.0           # via md-toc
 md-toc==6.0.2
+pypandoc==1.4
 pyyaml-include==1.2
 pyyaml==5.3
 rtyaml==1.0.0
+wheel==0.34.2             # via pypandoc
 git+https://github.com/CivicActions/secrender.git@v0.5.0#egg=secrender
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
